WFK2-825 Prevent clipping of text content.
CSS overflow rules are added to ensure that text overflows and
is visible, instead of being clipped.

--- a/kitchensink-cordova-contacts/www/css/screen.css
+++ b/kitchensink-cordova-contacts/www/css/screen.css
@@ -57,13 +57,10 @@ article > div.ui-content {
     margin: 0 auto;
 }
 
-article .wrap {
-    /* Set a background and border for the content to set it apart */
-    background: #cccccc;
-    border: 1px solid #aaaaaa;
-    border-radius: 8px;
-    /* Set padding so the edges are flush */
-    padding: 1em;
+article {
+    /* Set word wrap properties to break long text into separate lines */
+    word-break: break-all;
+    white-space: normal;
 }
 
 .mobileicon {
